bazel: Nuke all web frontend code, rules from orbit
This change removes all frontend code, including:

* the `//ui` dir
* associated bazel rules/macros
* loading of npm packages, frontend-related rules from WORKSPACE

The catalyst for this is INFRA-4192 - use of these rules uses a
`managed_directory` feature of WORKSPACE that is removed in bazel 6.0
and is thus blocking bazel updates. Fixing the UI code is:

* probably time-consuming, to understand the nuances of JS/TS
  compilation, by looking at https://docs.aspect.build/guides/rules_js_migration/
* of little value, since none of this code is actually used in anything

The only dependency that actually exists is on some font and CSS assets;
these are inlined into the repo directly, with a note on how to update
them if needed.

This also has ancillary benefits:

* reduced build times, since node modules don't need to be fetched
* no build-out-of-sync-type errors that necessitated a `bazel clean
  --expunge && rm -rf ui/node_modules to resolve

Tested: no

* TODO: should test that asset replacement doesn't cause issues

Jira: INFRA-4192

--- a/astore/server/assets/BUILD.bazel
+++ b/astore/server/assets/BUILD.bazel
@@ -1,18 +1,27 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_library")
 load("@io_bazel_rules_go//extras:embed_data.bzl", "go_embed_data")
 
+# Fetched by doing:
+#
+# ```
+# npm i material-design-icons
+# npm i material-design-lite
+# ```
+#
+# and then copying these files out of `node_modules` into this dir.
 filegroup(
     name = "css",
     srcs = [
-        "@npm//:node_modules/material-design-icons/iconfont/MaterialIcons-Regular.ttf",
-        "@npm//:node_modules/material-design-icons/iconfont/MaterialIcons-Regular.woff",
-        "@npm//:node_modules/material-design-icons/iconfont/MaterialIcons-Regular.woff2",
-        "@npm//:node_modules/material-design-icons/iconfont/material-icons.css",
-        "@npm//:node_modules/material-design-lite/material.min.css",
-        "@npm//:node_modules/material-design-lite/material.min.css.map",
-        "@npm//:node_modules/material-design-lite/material.min.js",
-        "@npm//:node_modules/material-design-lite/material.min.js.map",
+        "MaterialIcons-Regular.ttf",
+        "MaterialIcons-Regular.woff",
+        "MaterialIcons-Regular.woff2",
+        "material.min.css",
+        "material.min.css.map",
+        "material.min.js",
+        "material.min.js.map",
+        "material-icons.css",
     ],
+    visibility = ["//astore/server:__subpackages__"],
 )
 
 # Generate a .go file containing all the web assets.
