--- a/astore/server/BUILD.bazel
+++ b/astore/server/BUILD.bazel
@@ -74,24 +74,10 @@ go_library(
     visibility = ["//visibility:public"],
 )
 
-filegroup(
-    name = "css",
-    srcs = [
-        "@npm//:node_modules/material-design-icons/iconfont/MaterialIcons-Regular.ttf",
-        "@npm//:node_modules/material-design-icons/iconfont/MaterialIcons-Regular.woff",
-        "@npm//:node_modules/material-design-icons/iconfont/MaterialIcons-Regular.woff2",
-        "@npm//:node_modules/material-design-icons/iconfont/material-icons.css",
-        "@npm//:node_modules/material-design-lite/material.min.css",
-        "@npm//:node_modules/material-design-lite/material.min.css.map",
-        "@npm//:node_modules/material-design-lite/material.min.js",
-        "@npm//:node_modules/material-design-lite/material.min.js.map",
-    ],
-)
-
 # Generate a .go file containing all the web assets.
 go_embed_data(
     name = "embedded-assets",
-    srcs = [":css"] + glob(["assets/**"]),
+    srcs = ["//astore/server/assets:css"] + glob(["assets/**"]),
     flatten = True,
     package = "assets",
     visibility = ["//visibility:public"],
