--- a/.bazelrc
+++ b/.bazelrc
@@ -4,8 +4,6 @@
 #
 # The full list of Bazel options: https://docs.bazel.build/versions/master/command-line-reference.html
 
-# Cache action outputs on disk so they persist across output_base and bazel shutdown (eg. changing branches)
-build --disk_cache=~/.cache/bazel-disk-cache
 build --workspace_status_command "/bin/bash bazel/workspace_status.sh"
 # Bazel will create symlinks from the workspace directory to output artifacts.
 # Build results will be placed in a directory called "dist/bin"
@@ -26,6 +24,15 @@ build --workspace_status_command "/bin/bash bazel/workspace_status.sh"
 #   'streamed' to output logs for all tests in real time
 #     (this will force tests to be executed locally one at a time regardless of --test_strategy value).
 test --test_output=errors
+
+# googletest balks if C++ support is not at C++14 or higher, which our toolchain
+# does not default to.
+#
+# In theory, we only need this for the host configuration, but for some reason
+# certain tests with googletest are built and ran via the target configuration
+# as well.
+build --host_cxxopt=-std=c++2a
+build --cxxopt=-std=c++2a
 
 # Support for debugging NodeJS tests
 # Add the Bazel option `--config=debug` to enable this
