tools/codegen: add case handling extension in jinja2.
We are adding support for capnp generation of C kernel code.
This requires a lot of turning CamelCase to snake case, or
screaming snake case. Rather than implementing all this in
jinja templates, this PR brings in:
   https://pypi.org/project/jinja2-strcase/#description

That provides simple python implementations for the needed
conversion functions.

--- a/tools/codegen/BUILD.bazel
+++ b/tools/codegen/BUILD.bazel
@@ -49,6 +49,7 @@ py_binary(
         ":data_loader",
         requirement("absl-py"),
         requirement("jinja2"),
+        requirement("jinja2-strcase"),
         requirement("jsonschema"),
         requirement("markupsafe"),
         requirement("pyyaml"),
