--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ attrs==21.4.0
 importlib-metadata==4.11.3
 importlib-resources==5.7.1
 jinja2==3.1.1
+jinja2-strcase==0.0.2
 jsonschema==4.4.0
 linkify-it-py==1.0.3
 markdown-it-py==2.1.0
