--- a/tools/codegen/tests/test.template
+++ b/tools/codegen/tests/test.template
@@ -2,6 +2,8 @@ over={{over}}
 zoo={{zoo}}
 foo={{foo}}
 camel={{foo|to_screaming_snake}}
+tooth={{"tooth"|re_replace("o", "a")}}
+tooth={{re_replace("foo", "o", "a")}}
 {%- for t in bum %}
   bum: {{ t }}
 {%- endfor %}
