tools/codegen: add support for 'as_filter'.
This commit adds support for a tiny extension, as_filter, that allows
to use macros defined in templates as filters. This is extremely convenient
to apply repetitive set of filters to - for example - mangle names in
systemic ways.

Examples provided in the code.

--- a/tools/codegen/tests/test.template
+++ b/tools/codegen/tests/test.template
@@ -1,9 +1,13 @@
+{%- macro ImAFilter(text, prefix) -%}
+{{prefix}}{{text|upper}}
+{%- endmacro -%}
 over={{over}}
 zoo={{zoo}}
 foo={{foo}}
 camel={{foo|to_screaming_snake}}
 tooth={{"tooth"|re_replace("o", "a")}}
 tooth={{re_replace("foo", "o", "a")}}
+filtered={{"test string"|as_filter("ImAFilter", "myp_")}}
 {%- for t in bum %}
   bum: {{ t }}
 {%- endfor %}
