--- a/bes_publisher/buildevent/BUILD.bazel
+++ b/bes_publisher/buildevent/BUILD.bazel
@@ -2,16 +2,23 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
 
 go_library(
     name = "go_default_library",
-    srcs = ["service.go"],
+    srcs = [
+        "errslice.go",
+        "pubsub.go",
+        "service.go",
+    ],
     importpath = "github.com/enfabrica/enkit/bes_publisher/buildevent",
     visibility = ["//visibility:public"],
     deps = [
+        "//lib/multierror:go_default_library",
         "//third_party/bazel/src/main/java/com/google/devtools/build/lib/buildeventstream/proto:build_event_stream_go_proto",
         "@com_github_golang_glog//:go_default_library",
         "@com_github_golang_protobuf//ptypes:go_default_library_gen",
         "@com_github_prometheus_client_golang//prometheus:go_default_library",
         "@com_github_prometheus_client_golang//prometheus/promauto:go_default_library",
+        "@com_google_cloud_go_pubsub//:go_default_library",
         "@go_googleapis//google/devtools/build/v1:build_go_proto",
+        "@org_golang_google_protobuf//encoding/protojson:go_default_library",
         "@org_golang_google_protobuf//encoding/prototext:go_default_library",
         "@org_golang_google_protobuf//types/known/emptypb:go_default_library",
     ],
@@ -20,14 +27,22 @@ go_library(
 go_test(
     name = "go_default_test",
     srcs = [
+        "mockpubsub_test.go",
         "mockstream_test.go",
         "service_test.go",
     ],
     embed = [":go_default_library"],
     deps = [
         "//lib/errdiff:go_default_library",
+        "//lib/testutil:go_default_library",
+        "//third_party/bazel/src/main/java/com/google/devtools/build/lib/buildeventstream/proto:build_event_stream_go_proto",
+        "@com_github_google_go_cmp//cmp/cmpopts:go_default_library",
         "@com_github_stretchr_testify//mock:go_default_library",
+        "@com_github_stretchr_testify//require:go_default_library",
+        "@com_google_cloud_go_pubsub//:go_default_library",
         "@go_googleapis//google/devtools/build/v1:build_go_proto",
         "@org_golang_google_grpc//metadata:go_default_library",
+        "@org_golang_google_protobuf//proto:go_default_library",
+        "@org_golang_google_protobuf//types/known/anypb:go_default_library",
     ],
 )
