--- a/bes_publisher/buildevent/BUILD.bazel
+++ b/bes_publisher/buildevent/BUILD.bazel
@@ -10,6 +10,7 @@ go_library(
     importpath = "github.com/enfabrica/enkit/bes_publisher/buildevent",
     visibility = ["//visibility:public"],
     deps = [
+        "//lib/gmap:go_default_library",
         "//lib/multierror:go_default_library",
         "//third_party/bazel/src/main/java/com/google/devtools/build/lib/buildeventstream/proto:build_event_stream_go_proto",
         "@com_github_golang_glog//:go_default_library",
