bes_publisher: Add TargetComplete messages, more attributes
This change adds:
* propagation of `TargetComplete` messages, so that listeners can
  process the build completion of non-test targets
* addition of `rule_type` attributes to `TargetComplete` and
  `TestResult` messages, which will allow handlers to filter by rule
  type.

Tested: Stood up locally with debug handler, observed correct messages
and attributes being propagated

--- a/bes_publisher/buildevent/BUILD.bazel
+++ b/bes_publisher/buildevent/BUILD.bazel
@@ -37,6 +37,7 @@ go_test(
         "//lib/errdiff:go_default_library",
         "//lib/testutil:go_default_library",
         "//third_party/bazel/src/main/java/com/google/devtools/build/lib/buildeventstream/proto:build_event_stream_go_proto",
+        "@com_github_google_go_cmp//cmp:go_default_library",
         "@com_github_google_go_cmp//cmp/cmpopts:go_default_library",
         "@com_github_stretchr_testify//mock:go_default_library",
         "@com_github_stretchr_testify//require:go_default_library",
