//proxy/ptunnel:go_default_test: tagged no-presubmit

--- a/proxy/ptunnel/BUILD.bazel
+++ b/proxy/ptunnel/BUILD.bazel
@@ -30,6 +30,7 @@ go_test(
         # Test starts up a server on localhost, which may not be permitted on
         # remote workers.
         "no-remote-exec",
+        "no-presubmit",
     ],
     deps = [
         "//lib/errdiff",
