--- a/.bazelrc
+++ b/.bazelrc
@@ -79,3 +79,6 @@ run --incompatible_strict_action_env
 # rather than user.bazelrc as suggested in the Bazel docs)
 try-import %workspace%/.bazelrc.user
 
+# TODO(INFRA-4384): Remove this flag once all dependencies are compatible with
+# the new platforms repo for constraints.
+build --noincompatible_use_platforms_repo_for_constraints
