Add python pkg dependency to fix sphinx in internal

--- a/bazel/appengine/configtools/BUILD.bazel
+++ b/bazel/appengine/configtools/BUILD.bazel
@@ -1,7 +1,12 @@
+load("@python_dependencies//:requirements.bzl", "requirement")
+
 py_binary(
     name = "merge",
     srcs = [
         "merge.py",
+    ],
+    deps = [
+        requirement("pyyaml"),
     ],
     visibility = ["//visibility:public"],
 )
