--- a/lib/oauth/providers/BUILD.bazel
+++ b/lib/oauth/providers/BUILD.bazel
@@ -2,14 +2,18 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 
 go_library(
     name = "go_default_library",
-    srcs = ["github.go"],
-    importpath = "github.com/enfabrica/enkit/lib/oauth/ogithub",
+    srcs = [
+        "groups.go",
+        "providers.go",
+    ],
+    importpath = "github.com/enfabrica/enkit/lib/oauth/providers",
     visibility = ["//visibility:public"],
     deps = [
+        "//lib/kflags:go_default_library",
         "//lib/logger:go_default_library",
         "//lib/oauth:go_default_library",
-        "@com_github_google_go_github//github:go_default_library",
+        "//lib/oauth/ogithub:go_default_library",
+        "//lib/oauth/ogoogle:go_default_library",
         "@org_golang_x_oauth2//:go_default_library",
-        "@org_golang_x_oauth2//github:go_default_library",
     ],
 )
