whole repo: run gazelle, //:gazelle_update_repo and //:gazelle
... to pick up the changes in go.mod, go.sum, and quicktemplate.

This mostly worked as expected, except the new datastore library
is incompatible with Scott's patch.

Updated the patch, and tried to make it sligthly more future proof
by moving the code to the bottom of the file (less context that
can cause conflict).

--- a/astore/server/templates/BUILD.bazel
+++ b/astore/server/templates/BUILD.bazel
@@ -22,4 +22,5 @@ go_library(
     embed = [":templates"],  # keep
     importpath = "github.com/enfabrica/enkit/astore/server/templates",
     visibility = ["//visibility:public"],
+    deps = ["@com_github_valyala_quicktemplate//:go_default_library"],
 )
