--- a/tools/bzldoc/BUILD.bazel
+++ b/tools/bzldoc/BUILD.bazel
@@ -1,5 +1,5 @@
 load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
-load("@python_dependencies//:requirements.bzl", "requirement")
+load("@enkit_pip_deps//:requirements.bzl", "requirement")
 load(
     "//bazel/utils:diff_test.bzl",
     "diff_test",
