--- a/tools/codegen/BUILD.bazel
+++ b/tools/codegen/BUILD.bazel
@@ -1,5 +1,5 @@
 load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
-load("@python_dependencies//:requirements.bzl", "requirement")
+load("@enkit_pip_deps//:requirements.bzl", "requirement")
 
 bzl_library(
     name = "codegen_bzl",
