--- a/tools/mdfmt/BUILD.bazel
+++ b/tools/mdfmt/BUILD.bazel
@@ -1,7 +1,7 @@
 load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
 load("//bazel/utils:diff_test.bzl", "diff_test")
 load("//tools/mdfmt:mdfmt.bzl", "mdfmt_filter")
-load("@python_dependencies//:requirements.bzl", "requirement")
+load("@enkit_pip_deps//:requirements.bzl", "requirement")
 
 bzl_library(
     name = "mdfmt_bzl",
