python: Revamp how requirements are generated
This change introduces an "intent" file `requirements.in` which lists
the modules we would like to depend on with non-specific version
specifications, which gets programmatically turned into
`requirements.txt` by enumerating the transitive dependencies of the
modules that we want.

A `compile_pip_requirements` rule is added to BUILD.bazel to help in
generating `requirements.txt`; now the process for adding Python
dependencies is:

* Add a dependency line to `requirements.in`
* Regenerate `requirements.txt` by running `bazel run //:python_deps.update`

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -1,6 +1,7 @@
 load("//bazel/enkit:defs.bzl", "multirun")
 load("@bazel_gazelle//:def.bzl", "gazelle")
 load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")
+load("@rules_python//python/pip_install:requirements.bzl", "compile_pip_requirements")
 
 # To update and generate the BUILD.bazel files, run:
 #     bazelisk run //:gazelle
@@ -66,4 +67,10 @@ multirun(
         # TODO(scott): Move the main to //flextape/client, delete this dir
         "//manager/client:astore_push",
     ],
+)
+
+compile_pip_requirements(
+    name = "python_deps",
+    requirements_in = "requirements.in",
+    requirements_txt = "requirements.txt",
 )
