--- a/enkit/cmd/BUILD.bazel
+++ b/enkit/cmd/BUILD.bazel
@@ -7,6 +7,7 @@ go_library(
     visibility = ["//visibility:public"],
     deps = [
         "//astore/client/commands:go_default_library",
+        "//enkit/machinecert:go_default_library",
         "//enkit/outputs:go_default_library",
         "//enkit/version:go_default_library",
         "//lib/bazel/commands:go_default_library",
