lib/kcerts: separate object state from serialized state.
Background:
SSHAgent objects have state that has to be serialized to disk and
read back. Additionally, SSHAgent objects have attributes that are
necessary for the object to work (for example: a Close() callback).

In this commit:
- separate state from attributes.
- add a unit test to ensure everything is still working as expected.

(this is mostly in preparation of next commit)

--- a/lib/kcerts/BUILD.bazel
+++ b/lib/kcerts/BUILD.bazel
@@ -30,6 +30,7 @@ go_library(
 go_test(
     name = "go_default_test",
     srcs = [
+        "cache_test.go",
         "certs_test.go",
         "signer_test.go",
         "ssh_test.go",
