enproxy: Implement mapRequestHeadersByGroup
This change implements the "map request headers by group" functionality,
which allows header values to be assigned to a given header
conditionally based on group matching.

In order to simplify the logic a bit, a helper library is created to
convert slices into maps, reducing the need for nested `for` loops
within the feature implementation itself.

Tested: not yet

Jira: INFRA-4919

--- a/proxy/httpp/BUILD.bazel
+++ b/proxy/httpp/BUILD.bazel
@@ -14,6 +14,7 @@ go_library(
         "//lib/logger:go_default_library",
         "//lib/multierror:go_default_library",
         "//lib/oauth:go_default_library",
+        "//lib/slice:go_default_library",
         "//proxy/amux:go_default_library",
     ],
 )
