--- a/lib/client/commands/BUILD.bazel
+++ b/lib/client/commands/BUILD.bazel
@@ -10,7 +10,9 @@ go_library(
         "//lib/client:go_default_library",
         "//lib/config/identity:go_default_library",
         "//lib/kauth:go_default_library",
+        "//lib/kcerts:go_default_library",
         "//lib/kflags:go_default_library",
+        "//lib/kflags/kcobra:go_default_library",
         "//lib/retry:go_default_library",
         "@com_github_spf13_cobra//:go_default_library",
     ],
