--- a/build_nark/BUILD.bazel
+++ b/build_nark/BUILD.bazel
@@ -10,7 +10,7 @@ go_library(
         "@com_github_golang_protobuf//proto:go_default_library",
         "@com_github_googlecloudplatform_cloud_build_notifiers//lib/notifiers:go_default_library",
         "@com_github_sirupsen_logrus//:go_default_library",
-        "@go_googleapis//google/devtools/cloudbuild/v1:cloudbuild_go_proto",
+        "@com_google_cloud_go_cloudbuild//apiv1/v2/cloudbuildpb:go_default_library",
         "@in_gopkg_gomail_v2//:go_default_library",
     ],
 )
@@ -28,7 +28,7 @@ go_test(
     deps = [
         "@com_github_google_go_cmp//cmp:go_default_library",
         "@com_github_googlecloudplatform_cloud_build_notifiers//lib/notifiers:go_default_library",
-        "@go_googleapis//google/devtools/cloudbuild/v1:cloudbuild_go_proto",
+        "@com_google_cloud_go_cloudbuild//apiv1/v2/cloudbuildpb:go_default_library",
         "@in_gopkg_yaml_v2//:go_default_library",
     ],
 )
