--- a/enkit/machinecert/BUILD.bazel
+++ b/enkit/machinecert/BUILD.bazel
@@ -2,11 +2,17 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 
 go_library(
     name = "go_default_library",
-    srcs = ["commands.go"],
+    srcs = [
+        "commands.go",
+        "install.go",
+    ],
     importpath = "github.com/enfabrica/enkit/enkit/machinecert",
     visibility = ["//visibility:public"],
     deps = [
+        "//astore/rpc/auth:go_default_library",
         "//lib/client:go_default_library",
+        "//lib/kcerts:go_default_library",
         "@com_github_spf13_cobra//:go_default_library",
+        "@org_golang_x_crypto//ssh:go_default_library",
     ],
 )
