--- a/bb_reporter/reporter/BUILD.bazel
+++ b/bb_reporter/reporter/BUILD.bazel
@@ -6,11 +6,13 @@ go_library(
     importpath = "github.com/enfabrica/enkit/bb_reporter/reporter",
     visibility = ["//visibility:public"],
     deps = [
+        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
         "@com_github_buildbarn_bb_remote_execution//pkg/proto/completedactionlogger",
+        "@com_github_buildbarn_bb_remote_execution//pkg/proto/resourceusage",
         "@com_github_golang_glog//:go_default_library",
+        "@com_github_kylelemons_godebug//pretty:go_default_library",
         "@com_github_prometheus_client_golang//prometheus:go_default_library",
         "@com_github_prometheus_client_golang//prometheus/promauto:go_default_library",
-        "@org_golang_google_protobuf//encoding/prototext:go_default_library",
         "@org_golang_google_protobuf//types/known/emptypb:go_default_library",
     ],
 )
