lib/khttp/kserver: mixed bag of fixes.
Specifically:
1) When H2C is used, it can pick up an unitialized run method.
   This PR fixes it by defaulting its value if not initialized.
2) Added a unit test to verify correct flags behavior.
   (mostly unrelated to above bug, but allowed me to exclude
   other issues during debugging)

--- a/lib/khttp/BUILD.bazel
+++ b/lib/khttp/BUILD.bazel
@@ -30,5 +30,8 @@ go_test(
         "utils_test.go",
     ],
     embed = [":go_default_library"],
-    deps = ["@com_github_stretchr_testify//assert:go_default_library"],
+    deps = [
+        "//lib/kflags:go_default_library",
+        "@com_github_stretchr_testify//assert:go_default_library",
+    ],
 )
