--- a/lib/kcerts/BUILD.bazel
+++ b/lib/kcerts/BUILD.bazel
@@ -38,6 +38,7 @@ go_test(
     embed = [":go_default_library"],
     deps = [
         "//lib/cache:go_default_library",
+        "//lib/kflags:go_default_library",
         "//lib/logger/klog:go_default_library",
         "@com_github_stretchr_testify//assert:go_default_library",
         "@org_golang_x_crypto//ssh:go_default_library",
