--- a/shims/buildbuddy/BUILD.bazel
+++ b/shims/buildbuddy/BUILD.bazel
@@ -12,5 +12,8 @@ go_test(
     name = "go_default_test",
     srcs = ["urls_test.go"],
     embed = [":go_default_library"],
-    deps = ["@com_github_stretchr_testify//assert:go_default_library"],
+    deps = [
+        "//lib/errdiff:go_default_library",
+        "@com_github_stretchr_testify//assert:go_default_library",
+    ],
 )
