--- a/bazel/linux/kunit/BUILD.bazel
+++ b/bazel/linux/kunit/BUILD.bazel
@@ -28,6 +28,7 @@ py_library(
 py_library(
     name = "kunit_parser",
     srcs = ["kunit_parser.py"],
+    visibility = ["//visibility:public"],
 )
 
 py_library(
