metrics: Promote library from internal
This change moves the `metrics` library from internal so that enkit can
take advantage of it. This library:

* simplifies the creation of a metrics server (if minutely)
* adds default metrics for stamped builds, which is useful to audit code
  currently running on metrics dashboards

Tested: no

--- a/bb_reporter/BUILD.bazel
+++ b/bb_reporter/BUILD.bazel
@@ -9,10 +9,10 @@ go_library(
     visibility = ["//visibility:private"],
     deps = [
         "//bb_reporter/reporter:go_default_library",
+        "//lib/metrics:go_default_library",
         "//lib/server:go_default_library",
         "@com_github_buildbarn_bb_remote_execution//pkg/proto/completedactionlogger",
         "@com_github_golang_glog//:go_default_library",
-        "@com_github_prometheus_client_golang//prometheus/promhttp:go_default_library",
         "@org_golang_google_grpc//:go_default_library",
     ],
 )
