--- a/bes_publisher/BUILD.bazel
+++ b/bes_publisher/BUILD.bazel
@@ -7,9 +7,9 @@ go_library(
     visibility = ["//visibility:private"],
     deps = [
         "//bes_publisher/buildevent:go_default_library",
+        "//lib/metrics:go_default_library",
         "//lib/server:go_default_library",
         "@com_github_golang_glog//:go_default_library",
-        "@com_github_prometheus_client_golang//prometheus/promhttp:go_default_library",
         "@com_google_cloud_go_pubsub//:go_default_library",
         "@go_googleapis//google/devtools/build/v1:build_go_proto",
         "@org_golang_google_grpc//:go_default_library",
