--- a/flextape/server/BUILD.bazel
+++ b/flextape/server/BUILD.bazel
@@ -11,8 +11,8 @@ go_library(
         "//flextape/frontend:go_default_library",
         "//flextape/proto:go_default_library",
         "//flextape/service:go_default_library",
+        "//lib/metrics:go_default_library",
         "//lib/server:go_default_library",
-        "@com_github_prometheus_client_golang//prometheus/promhttp:go_default_library",
         "@org_golang_google_grpc//:go_default_library",
         "@org_golang_google_protobuf//encoding/prototext:go_default_library",
     ],
