--- a/astore/server/BUILD.bazel
+++ b/astore/server/BUILD.bazel
@@ -19,6 +19,7 @@ go_library(
         "//astore/server/configs:go_default_library",  # keep
         "//astore/server/credentials:go_default_library",  # keep
         "//astore/server/templates",
+        "//lib/appengine:go_default_library",
         "//lib/kflags:go_default_library",
         "//lib/kflags/kcobra:go_default_library",
         "//lib/kflags/kconfig:go_default_library",
