--- a/astore/server/deploy/app.yaml
+++ b/astore/server/deploy/app.yaml
@@ -4,3 +4,19 @@ instance_class: F1
 automatic_scaling:
   max_instances: 1
   min_instances: 1
+
+# Liveness checks info:
+# https://cloud.google.com/appengine/docs/flexible/reference/app-yaml?tab=python#liveness_checks
+liveness_check:
+  path: "/_ah/live"
+  check_interval_sec: 30
+  timeout_sec: 3
+  success_threshold: 1
+  failure_threshold: 2
+readiness_check:
+  path: "/_ah/ready"
+  check_interval_sec: 5
+  timeout_sec: 3
+  success_threshold: 2
+  failure_threshold: 2
+  app_start_timeout_sec: 3
