--- a/bazel/enkit_credential_helper/BUILD.bazel
+++ b/bazel/enkit_credential_helper/BUILD.bazel
@@ -19,5 +19,7 @@ go_library(
         "//lib/config/defcon:go_default_library",
         "//lib/config/identity:go_default_library",
         "//lib/khttp/kcookie:go_default_library",
+        "//lib/stamp:go_default_library",
+        "@com_github_spf13_cobra//:go_default_library",
     ],
 )
