dropbear: use @enkit to refer to the BUILD.bazel files and patches.
... otherwise it doesn't really work from other repositories.
(my branch had this fixed, did not end up in the partial PR that
was merged - my bad here)

--- a/bazel/dependencies/dropbear.BUILD.bazel
+++ b/bazel/dependencies/dropbear.BUILD.bazel
@@ -19,7 +19,7 @@ configure_make(
 )
 
 
-load("@//bazel/utils:binary.bzl", "declare_binary")
+load("@enkit//bazel/utils:binary.bzl", "declare_binary")
 
 declare_binary(
     name = "dropbear",
