googletest: Update to 1.13.0
This change updates googletest to 1.13.0, to pick up fixes to the bazel
rule/macro glue within that make it more compatible with newer versions
of bazel.

Updating googletest causes tests in this repo to fail, unless flags are
passed to set the C++ standard higher by default. We'd prefer to match
the flags passed in internal (`-std=c++20`), but those don't seem to
work in this context, so we pass the next most approximate flag
(`-std=c++2a`).

Tested: `bazel test //...` in this repo

--- a/.bazelrc
+++ b/.bazelrc
@@ -27,3 +27,8 @@ try-import %workspace%/.bazelrc.user
 # TODO(INFRA-4384): Remove this flag once all dependencies are compatible with
 # the new platforms repo for constraints.
 build --noincompatible_use_platforms_repo_for_constraints
+
+# googletest requires C++14 or newer. Force C++20 for all builds by default.
+# The compiler used in the current container seems to only understand
+# `-std=c++2a` instead of `-std=c++20`.
+build --cxxopt=-std=c++2a --host_cxxopt=-std=c++2a
