build: Tag tests that can't run remotely
This change adds `no-remote-exec` tags to all tests that contain
behavior not currently/reasonably expected to work on an RBE instance,
so that we can individually enable RBE in builds and fearlessly do
`bazel test //...`.

Tested:

--- a/faketree/BUILD.bazel
+++ b/faketree/BUILD.bazel
@@ -23,6 +23,11 @@ go_test(
     name = "go_default_test",
     srcs = ["faketree_test.go"],
     embed = [":go_default_library"],
+    tags = [
+        # This test depends on the UID/GID of the current user, which may not
+        # match that of remote executors.
+        "no-remote-exec",
+    ],
     deps = ["@com_github_stretchr_testify//assert:go_default_library"],
 )
 
