--- a/lib/config/directory/BUILD.bazel
+++ b/lib/config/directory/BUILD.bazel
@@ -12,5 +12,10 @@ go_test(
     name = "go_default_test",
     srcs = ["homedir_test.go"],
     embed = [":go_default_library"],
+    tags = [
+        # Test depends on being able to open the detected home directory, which
+        # may not exist on remote executors.
+        "no-remote-exec",
+    ],
     deps = ["@com_github_stretchr_testify//assert:go_default_library"],
 )
