copy kunit_parser.py from Linux v6.4
The newer kunit_parser.py adds support for KUnit tests executed by newer
kernels.

Signed-off-by: George Prekas <george@enfabrica.net>

--- a/bazel/linux/kunit/BUILD.bazel
+++ b/bazel/linux/kunit/BUILD.bazel
@@ -27,7 +27,10 @@ py_library(
 
 py_library(
     name = "kunit_parser",
-    srcs = ["kunit_parser.py"],
+    srcs = [
+        "kunit_parser.py",
+        "kunit_printer.py",
+    ],
     visibility = ["//visibility:public"],
 )
 
