--- a/auth/server/auth/BUILD.bazel
+++ b/auth/server/auth/BUILD.bazel
@@ -6,11 +6,11 @@ go_library(
         "auth.go",
         "factory.go",
     ],
-    importpath = "github.com/enfabrica/enkit/astore/server/auth",
+    importpath = "github.com/enfabrica/enkit/auth/server/auth",
     visibility = ["//visibility:public"],
     deps = [
-        "//astore/common:go_default_library",
-        "//astore/rpc/auth:go_default_library",
+        "//auth/common:go_default_library",
+        "//auth/proto:go_default_library",
         "//lib/kcerts:go_default_library",
         "//lib/kflags:go_default_library",
         "//lib/logger:go_default_library",
@@ -28,8 +28,8 @@ go_test(
     srcs = ["auth_test.go"],
     embed = [":go_default_library"],
     deps = [
-        "//astore/common:go_default_library",
-        "//astore/rpc/auth:go_default_library",
+        "//auth/common:go_default_library",
+        "//auth/proto:go_default_library",
         "//lib/cache:go_default_library",
         "//lib/kcerts:go_default_library",
         "//lib/logger:go_default_library",
