--- a/enkit/machinecert/BUILD.bazel
+++ b/enkit/machinecert/BUILD.bazel
@@ -9,7 +9,7 @@ go_library(
     importpath = "github.com/enfabrica/enkit/enkit/machinecert",
     visibility = ["//visibility:public"],
     deps = [
-        "//astore/rpc/auth:go_default_library",
+        "//auth/proto:go_default_library",
         "//lib/client:go_default_library",
         "//lib/kcerts:go_default_library",
         "@com_github_spf13_cobra//:go_default_library",
