--- a/lib/kauth/BUILD.bazel
+++ b/lib/kauth/BUILD.bazel
@@ -9,8 +9,8 @@ go_library(
     importpath = "github.com/enfabrica/enkit/lib/kauth",
     visibility = ["//visibility:public"],
     deps = [
-        "//astore/common:go_default_library",
-        "//astore/rpc/auth:go_default_library",
+        "//auth/common:go_default_library",
+        "//auth/proto:go_default_library",
         "//lib/cache:go_default_library",
         "//lib/kcerts:go_default_library",
         "//lib/logger:go_default_library",
