--- a/machinist/machine/BUILD.bazel
+++ b/machinist/machine/BUILD.bazel
@@ -11,7 +11,7 @@ go_library(
     importpath = "github.com/enfabrica/enkit/machinist/machine",
     visibility = ["//visibility:public"],
     deps = [
-        "//astore/rpc/auth:go_default_library",
+        "//auth/proto:go_default_library",
         "//lib/client:go_default_library",
         "//lib/goroutine:go_default_library",
         "//lib/kcerts:go_default_library",
