bazel: Dependency mods to build buildbarn libs
This change demonstrates that we're able to build against:
* google bytestream protos
  * This unblocks experiments that want to implement bytestream
    clients/servers
* bazel remote-apis protos (remote execution, CAS, etc.)
  * This unblocks experiments that want to implement CAS clients/servers
* buildbarn libraries (bb-storage, bb-remote-execution)
  * This allows us to leverage libraries/buildbarn pieces to create our
    own workers/runners, etc.

...by adding a demo binary in `//experimental/remote_apis_build_demo`
that builds against all three of the above.

In order to do this, many tweaks to dependencies were needed, including:

* Added `rules_antlr` as a dependency
* Resolved circular WORKSPACE dependency by forking `rules_antlr` patch
  from buildbarn
* Updated `rules_go`, `gazelle`
* Added gazelle directives to some dependencies to resolve generated
  proto code from the correct source
* Removed `go_googleapis` override (presumably rules_go no longer pulls
  this in and necessitates an override!)
* Added patch for `github.com/bazelbuild/remote-apis` forked from
  buildbarn
* Added patches for `go-fuse` library forked from buildbarn
* Added patches for `github.com/golang/mock` forked from buildbarn
* Added patches for `golang.org/x/oauth2` forked from buildbarn

Tested:
* `bazel test @com_github_buildbarn_bb_remote_execution//pkg//...`
  passes
* `bazel test @com_github_buildbarn_bb_storage//pkg//...`
  passes
* `bazel test //infra/...` from internal using this repo works (with
  modifications)

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -47,6 +47,18 @@ gazelle(
 #
 # gazelle:resolve go kythe.io/kythe/go/platform/delimited @io_kythe//kythe/go/platform/delimited
 
+# Buildbarn gazelle resolve mappings
+# Buildbarn dependencies may need certain overrides; these mappings are copied
+# from BUILD.bazel in github.com/buildbarn/bb-remote-execution so that libraries
+# from that repo can build.
+
+# gazelle:resolve proto pkg/proto/configuration/cloud/aws/aws.proto @com_github_buildbarn_bb_storage//pkg/proto/configuration/cloud/aws:aws_proto
+# gazelle:resolve proto go pkg/proto/configuration/cloud/aws/aws.proto @com_github_buildbarn_bb_storage//pkg/proto/configuration/cloud/aws
+# gazelle:resolve proto proto google/rpc/code.proto @googleapis//google/rpc:code_proto
+# gazelle:resolve proto go google/rpc/code.proto @org_golang_google_genproto_googleapis_rpc//code
+# gazelle:resolve proto proto google/rpc/status.proto @googleapis//google/rpc:status_proto
+# gazelle:resolve proto go google/rpc/status.proto @org_golang_google_genproto_googleapis_rpc//status
+
 # gazelle:resolve go github.com/enfabrica/enkit/auth/server/assets/templates //auth/server/assets/templates
 
 exports_files(
