--- a/lib/protocfg/BUILD.bazel
+++ b/lib/protocfg/BUILD.bazel
@@ -6,7 +6,7 @@ go_library(
     importpath = "github.com/enfabrica/enkit/lib/protocfg",
     visibility = ["//visibility:public"],
     deps = [
-        "@com_github_google_go_jsonnet//:go_default_library",
+        "@com_github_google_go_jsonnet//:go-jsonnet",
         "@org_golang_google_protobuf//encoding/protojson",
         "@org_golang_google_protobuf//encoding/prototext",
         "@org_golang_google_protobuf//proto",
