--- a/lib/kcerts/BUILD.bazel
+++ b/lib/kcerts/BUILD.bazel
@@ -21,6 +21,7 @@ go_library(
         "//lib/logger",
         "//lib/multierror",
         "//lib/srand",
+        "@com_github_microsoft_go_winio//:go-winio",
         "@com_github_mitchellh_go_homedir//:go-homedir",
         "@org_golang_x_crypto//ssh",
         "@org_golang_x_crypto//ssh/agent",
