Dynamically load modules

--- a/lib/kcerts/BUILD.bazel
+++ b/lib/kcerts/BUILD.bazel
@@ -6,9 +6,11 @@ go_library(
         "cache.go",
         "certs.go",
         "keys.go",
+        "linux.go",
         "signer.go",
         "ssh.go",
         "types.go",
+        "windows.go",
     ],
     importpath = "github.com/enfabrica/enkit/lib/kcerts",
     visibility = ["//visibility:public"],
