--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,3 +1,3 @@
 *.sh @jonathan-enf @ccontavalli @ahungrynacho @minor-fixes @aaahrens
-/scripts @amichalol @jonathan-enf @ccontavalli @minor-fixes @george-enf
+/scripts @amichalol @jonathan-enf @ccontavalli @minor-fixes
 
