licensedevice plugin: Implement docker-based Notifier
This change ends up being a sort of "rest of the owl" change to produce
something nominally demo-able. It includes:

* SQL scripts that initialize a DB with dummy data
* Docker Notifier implementation that listens for containers to be
  started/killed, and looks at their environment vars to deduce which
  licenses it uses
* Various other bug fixes and improvements that allow the thing to
  actually work, be demoed.

There are still lots of glaring holes to be fixed in future changes
and/or a rewrite to a non-experimental dir.

Tested:
* ran locally 2x with:

  ```
  NOMAD_PLUGIN_MAGIC_COOKIE=e4327c2e01eabfd75a8a67adb114fb34a757d57eee7728d857a8cec6e91a7255 \
  bazel run \
    //experimental/nomad_resource_plugin/licensedevice/cmd/nomad_license_plugin \
    -- \
    'postgresql://<USER>:<URL_ENCODED_PW>@<HOSTNAME>:5432/cj_stage' \
    'license_state' \
    'scott-workstation-2'
 ```

 (the last arg is the local hostname, which is changed between the two
  instances
* on one instance, ran `grpc_cli call unix://<SOCKET_FILE>
  hashicorp.nomad.plugins.device.DevicePlugin.Fingerprint ''` to print
  out streaming Fingerprint responses (plugin prints out the socket file
  to use on start)
* on the other instance, made a `Reserve` call, saw Fingerprint respond
  on the first instance as unhealthy
* ran `docker run -it -e LICENSEPLUGIN_RESERVED_IDS=example_ax_1 ubuntu
  /bin/bash` to simulate a workload starting; saw DB get updated and
  more Fingerprint responses
* exited aforementioned container; saw DB get updated and more
  Fingerprint responses

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,5 +32,17 @@
   },
   "go.useLanguageServer": true,
   "go.lintOnSave": "off",
-  "go.vetOnSave": "off"
+  "go.vetOnSave": "off",
+  "sqltools.connections": [
+    {
+      "previewLimit": 50,
+      "server": "localhost",
+      "port": 5432,
+      "driver": "PostgreSQL",
+      "name": "cj_stage",
+      "database": "cj_stage",
+      "username": "postgres",
+      "password": ",FV-X{C<hs$T]v3S"
+    }
+  ]
 }
