license manager: Delete unused code
`flextape` has replaced `manager`, but the latter is still present in
the source tree. This change removes it so that it no longer needs to be
maintained.

The astore upload of the `manager` client has been replaced with one of
`flextape_client`, to finish the migration from one to the other.

Tested: `bazel test //...` still passes as much as it is expected to

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -83,8 +83,7 @@ multirun(
         "//staco:deploy",
         "//faketree:astore_push",
         "//flextape/server:astore_push",
-        # TODO(scott): Move the main to //flextape/client, delete this dir
-        "//manager/client:astore_push",
+        "//flextape/client/flextape_client:astore_push",
     ],
 )
 
