Fix build errors.

--- a/experimental/nomad_resource_plugin/licensedevice/cmd/nomad_license_plugin/BUILD.bazel
+++ b/experimental/nomad_resource_plugin/licensedevice/cmd/nomad_license_plugin/BUILD.bazel
@@ -6,7 +6,10 @@ go_library(
     importpath = "github.com/enfabrica/enkit/experimental/nomad_resource_plugin/licensedevice/cmd/nomad_license_plugin",
     visibility = ["//visibility:private"],
     deps = [
+        "//lib/metrics",
+        "//lib/server",
         "//experimental/nomad_resource_plugin/licensedevice",
+        "@com_github_golang_glog//:glog",
         "@com_github_hashicorp_go_hclog//:go-hclog",
         "@com_github_hashicorp_nomad//plugins",
     ],
